<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="facebook_app_id">2816254995335209</string>
    <string name="fb_login_protocol_scheme">fb2816254995335209</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="google_sign_up">Sign in with Google</string>
    <string name="facebook_sign_up">Sign in with Facebook</string>
    <string name="main_app_desc">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="hungry">I\'m Hungry!</string>
    <string name="map_view">MAP VIEW</string>
    <string name="list_view">LIST VIEW</string>
    <string name="workmates">WORKMATES</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="is_joining">is joining!</string>
    <string name="is_eating">is eating </string>
    <string name="not_decided"><i>hasn\'t decided yet</i></string>
    <string name="send_a_message">Send a message…</string>
    <string name="adapter_empty">No results…</string>
    <string name="lunch_remember">Your meal reminder</string>
    <string name="search">Search for a restaurant…</string>
    <string name="notif_hi">Hi </string>
    <string name="notif_place"> for your lunch, you eat in </string>
    <string name="notif_place2"> located at : </string>
    <string name="notif_workmates"> with the following workmates : </string>
    <string name="allow_notification">Allow notification</string>
    <string name="alreadyLiked">You can\'t like 2 different restaurants</string>
    <string name="mapView">Map View</string>
    <string name="listView">List View</string>
    <string name="workmate">Workmates</string>
    <string name="chat">Chat</string>
</resources>